--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,39 @@
-Django
-django-autoslug
-django-cors-headers
-django-filter
-django-rest-swagger
-django-smart-selects
-djangorestframework
-djangorestframework-simplejwt
-drf-yasg
-gunicorn
-Markdown
-Pillow
-
+asgiref==3.6.0
+autopep8==2.0.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
+coreapi==2.3.3
+coreschema==0.0.4
+Django==4.1.5
+django-autoslug==1.9.8
+django-cors-headers==3.13.0
+django-filter==22.1
+django-rest-swagger==2.2.0
+django-smart-selects==1.6.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+drf-yasg==1.21.5
+gunicorn==20.1.0
+idna==3.4
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
+Markdown==3.4.1
+MarkupSafe==2.1.2
+openapi-codec==1.3.2
+packaging==23.1
+Pillow==9.4.0
+psycopg==3.1.9
+psycopg2==2.9.6
+pycodestyle==2.10.0
+PyJWT==2.6.0
+pytz==2022.7.1
+requests==2.31.0
+ruamel.yaml==0.17.31
+ruamel.yaml.clib==0.2.7
+simplejson==3.19.1
+sqlparse==0.4.3
+typing_extensions==4.7.1
+tzdata==2022.7
+uritemplate==4.1.1
+urllib3==2.0.2
