--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.5
 gunicorn==20.1.0
 idna==3.4
+importlib-metadata==6.8.0
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
@@ -28,12 +29,15 @@ psycopg2==2.9.6
 pycodestyle==2.10.0
 PyJWT==2.6.0
 pytz==2022.7.1
+razorpay==1.4.1
 requests==2.31.0
 ruamel.yaml==0.17.31
 ruamel.yaml.clib==0.2.7
 simplejson==3.19.1
 sqlparse==0.4.3
+tomli==2.0.1
 typing_extensions==4.7.1
 tzdata==2022.7
 uritemplate==4.1.1
 urllib3==2.0.2
+zipp==3.16.2
